[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Objects/Foliage/Magic Forest/MagicGrass.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/Foliage/Magic Forest/Grass_1.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.53371
height = 4.75459

[node name="MagicGrass" type="Node2D"]
script = ExtResource( 1 )

[node name="GrassSprite" type="Sprite" parent="."]
position = Vector2( 0.155823, -0.934933 )
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.155823, -0.934933 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 1.96414 )
rotation = -4.69668
shape = SubResource( 1 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
